fixed xray gan post

--- a/_posts/2023-06-18-xray-gan.md
+++ b/_posts/2023-06-18-xray-gan.md
@@ -89,8 +89,7 @@ Our theory is that there are multiple centroids per class per real synthesized d
 ## Performance and Future directions
 Finally, the model performance.
 
-<img src="/assets/img/blogs/2023/2023-06-18-xray-gan/performance.png
-"  width="600">
+<img src="/assets/img/blogs/2023/2023-06-18-xray-gan/performance.png"  width="600">
 
 |Dataset Name | Abbreviation | Description |
 | :--- | :---: | :--- |
