fixed image in xray post

--- a/_posts/2023-06-18-xray-gan.md
+++ b/_posts/2023-06-18-xray-gan.md
@@ -47,8 +47,7 @@ Daesung is tackling an imbalance issue in his X-ray training dataset at work, an
 
 In the paper, the authors present their custom DCGAN model, which utilizes fractionally-strided convolutions. They demonstrate that with each iteration, the model improves significantly, transforming distinguishable chest structures into detailed representations of ribs and vessels in just 18 epochs.
 
-<img src="/assets/img/blogs/2023/2023-06-18-xray-gan/chest-gan-epochs.png
-"  width="600">
+<img src="/assets/img/blogs/2023/2023-06-18-xray-gan/chest-gan-epochs.png"  width="600">
 
 *Figure 4: Visualization of random samples for different epochs*
 
